--- a/app/src/main/res/layout/fragment_settings_account_controls.xml
+++ b/app/src/main/res/layout/fragment_settings_account_controls.xml
@@ -36,7 +36,7 @@
             android:id="@+id/username_display_text_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/username_input"
+            android:text="@{settingsVM.loginUsername}"
             android:textColor="@color/white"
             android:layout_margin="10dp"
             app:layout_constraintTop_toBottomOf="@+id/user_account_profile_pic_id"
