--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/profile_image"
                 android:layout_width="44dp"
                 android:layout_height="44dp"
-                android:src="@drawable/personal_pic_placeholder"
+                android:src="@drawable/ic_def_profile"
                 app:civ_border_color="#FFFFFF"
                 app:civ_border_width="1dp" />
 
