--- a/app/src/main/res/layout/fragment_edit_task.xml
+++ b/app/src/main/res/layout/fragment_edit_task.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/edit_task_layout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-android:padding="24dp"
-android:gravity="center"
-android:background="#FFFFFF">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="24dp"
+    android:gravity="center"
+    android:background="#FFFFFF">
 
     <Button
         android:id="@+id/btn_edit_description"
@@ -16,7 +17,10 @@ android:background="#FFFFFF">
         android:layout_height="wrap_content"
         android:text="Edit Description"
         tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="102dp" />
+        tools:layout_editor_absoluteY="102dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
         android:id="@+id/btn_edit_priority"
@@ -24,7 +28,10 @@ android:background="#FFFFFF">
         android:layout_height="wrap_content"
         android:text="Edit Priority Level"
         tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="156dp" />
+        tools:layout_editor_absoluteY="156dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_edit_description"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
         android:id="@+id/btn_edit_pomodoros"
@@ -32,6 +39,9 @@ android:background="#FFFFFF">
         android:layout_height="wrap_content"
         android:text="Edit Number of Pomodoro's"
         tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="219dp" />
+        tools:layout_editor_absoluteY="219dp"
+        app:layout_constraintTop_toBottomOf="@+id/btn_edit_priority"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
