--- a/app/src/main/res/layout/fragment_edit_task.xml
+++ b/app/src/main/res/layout/fragment_edit_task.xml
@@ -1,47 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/edit_task_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="24dp"
-    android:gravity="center"
-    android:background="#FFFFFF">
-
-    <Button
-        android:id="@+id/btn_edit_description"
+    <data>
+        <variable
+            name="taskVM"
+            type="com.example.pomodoro_timer.viewmodels.TaskViewModel" />
+    </data>
+    
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/edit_task_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Edit Description"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="102dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="24dp"
+        android:gravity="center"
+        android:background="#FFFFFF">
 
-    <Button
-        android:id="@+id/btn_edit_priority"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Edit Priority Level"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="156dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_edit_description"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_edit_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Edit Description"
+            tools:layout_editor_absoluteX="24dp"
+            tools:layout_editor_absoluteY="102dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
-        android:id="@+id/btn_edit_pomodoros"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Edit Number of Pomodoro's"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="219dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_edit_priority"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Button
+            android:id="@+id/btn_edit_priority"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Edit Priority Level"
+            tools:layout_editor_absoluteX="24dp"
+            tools:layout_editor_absoluteY="156dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_edit_description"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btn_edit_pomodoros"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Edit Number of Pomodoro's"
+            tools:layout_editor_absoluteX="24dp"
+            tools:layout_editor_absoluteY="219dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_edit_priority"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
