--- a/app/src/main/res/layout/fragment_edit_category.xml
+++ b/app/src/main/res/layout/fragment_edit_category.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
         <data>
                 <variable
@@ -7,49 +8,172 @@
                     type="com.example.pomodoro_timer.viewmodels.TaskViewModel" />
         </data>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/edit_category_layout"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="24dp"
-            android:gravity="center"
-            android:background="#FFFFFF">
+            android:layout_height="match_parent">
 
-                <Button
-                    android:id="@+id/btn_edit_title"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="47dp"
-                    android:text="Edit Title"
-                    tools:layout_editor_absoluteX="16dp"
-                    tools:layout_editor_absoluteY="70dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    android:layout_height="wrap_content">
 
-                <Button
-                    android:id="@+id/btn_edit_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="47dp"
-                    android:text="Edit Description"
-                    tools:layout_editor_absoluteX="16dp"
-                    tools:layout_editor_absoluteY="126dp"
-                    app:layout_constraintTop_toBottomOf="@+id/btn_edit_title"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                        <!-- Category title -->
+                        <LinearLayout
+                            android:id="@+id/category_title_layout_id"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:background="@drawable/background_gradient_card"
+                            android:padding="16dp"
+                            android:layout_margin="16dp"
+                            app:layout_constraintTop_toTopOf="parent">
 
-                <Button
-                    android:id="@+id/btn_edit_icon"
-                    android:layout_width="match_parent"
-                    android:layout_height="47dp"
-                    android:text="Edit Category Icon (Optional)"
-                    tools:layout_editor_absoluteX="24dp"
-                    tools:layout_editor_absoluteY="186dp"
-                    app:layout_constraintTop_toBottomOf="@+id/btn_edit_description"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/title_label"
+                                    android:textColor="@android:color/white"
+                                    android:textSize="20sp" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                                <com.google.android.material.textfield.TextInputLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="60dp"
+                                    app:hintEnabled="false"
+                                    app:boxBackgroundMode="none"
+                                    app:counterEnabled="true"
+                                    app:counterMaxLength="30">
+
+                                        <com.google.android.material.textfield.TextInputEditText
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:hint="@string/short_desc_label"
+                                            android:text="@={taskVM.categoryTitle}"
+                                            android:inputType="text"
+                                            android:textSize="16sp"/>
+
+                                </com.google.android.material.textfield.TextInputLayout>
+
+                        </LinearLayout>
+
+                        <!-- Category Description -->
+                        <LinearLayout
+                            android:id="@+id/task_desc_layout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:background="@drawable/background_gradient_card"
+                            android:padding="16dp"
+                            android:layout_margin="16dp"
+                            app:layout_constraintTop_toBottomOf="@+id/category_title_layout_id">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/desc_label"
+                                    android:textColor="@android:color/white"
+                                    android:textSize="20sp" />
+
+                                <com.google.android.material.textfield.TextInputLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    app:boxBackgroundMode="none">
+
+                                        <com.google.android.material.textfield.TextInputEditText
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:hint="@string/desc_placeholder"
+                                            android:text="@={taskVM.categoryDescription}"
+                                            android:textSize="16sp"
+                                            android:maxLines="5"
+                                            android:gravity="top|start"/>
+
+                                </com.google.android.material.textfield.TextInputLayout>
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:id="@+id/task_icon_selector_layout_id"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:background="@drawable/background_dim_curved_purple"
+                            android:padding="16dp"
+                            android:layout_margin="16dp"
+                            app:layout_constraintTop_toBottomOf="@+id/task_desc_layout">
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/category_icon_selector_label"
+                                    android:textColor="@android:color/white"
+                                    android:textSize="20sp" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="@string/category_icon_selector_label2"
+                                    android:textColor="@color/dim_color"
+                                    android:textSize="14sp" />
+
+                                <!-- Category selection icons -->
+                                <LinearLayout
+                                    android:id="@+id/iconSelectorLayout"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal">
+
+                                        <ImageView
+                                            android:id="@+id/icon1"
+                                            android:layout_width="48dp"
+                                            android:layout_height="48dp"
+                                            android:layout_margin="6dp"
+                                            android:src="@drawable/ic_category_laptop"
+                                            android:background="@drawable/ic_selector_bg"
+                                            android:contentDescription="@string/selector_icon_laptop"
+                                            android:scaleType="centerInside"
+                                            android:clickable="true"
+                                            android:focusable="true" />
+
+                                        <ImageView
+                                            android:id="@+id/icon2"
+                                            android:layout_width="48dp"
+                                            android:layout_height="48dp"
+                                            android:layout_margin="6dp"
+                                            android:src="@drawable/ic_category_book"
+                                            android:background="@drawable/ic_selector_bg"
+                                            android:contentDescription="@string/selector_icon_book"
+                                            android:scaleType="centerInside"
+                                            android:clickable="true"
+                                            android:focusable="true" />
+
+
+                                </LinearLayout>
+                        </LinearLayout>
+
+                        <!-- Cancel and Save buttons -->
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/cancel_btn_id"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/cancel_btn"
+                            android:textColor="@color/white"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginStart="16dp"
+                            android:backgroundTint="@color/category_title_color3"
+                            app:layout_constraintTop_toBottomOf="@+id/task_icon_selector_layout_id"
+                            app:layout_constraintStart_toStartOf="parent"/>
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/save_btn_id"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/save_btn"
+                            android:textColor="@color/icon_bg1"
+                            android:backgroundTint="@color/white"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="16dp"
+                            app:layout_constraintTop_toBottomOf="@+id/task_icon_selector_layout_id"
+                            app:layout_constraintEnd_toEndOf="parent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
 </layout>
