--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -60,6 +60,19 @@
             app:layout_constraintBottom_toTopOf="@+id/category_lists_label_id"/>
 
         <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/you_have_no_tasks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You have no tasks"
+            android:textColor="@android:color/white"
+            android:textSize="25sp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/task_recycler_view_id"
+            app:layout_constraintBottom_toBottomOf="@+id/task_recycler_view_id"/>
+
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/category_lists_label_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,6 +93,19 @@
             app:layout_constraintEnd_toStartOf="@id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/category_lists_label_id"
             app:layout_constraintBottom_toTopOf="@id/guideline3"/>
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/you_have_no_categories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You have no categories"
+            android:textColor="@android:color/white"
+            android:textSize="25sp"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/category_recycler_view_id"
+            app:layout_constraintBottom_toBottomOf="@+id/category_recycler_view_id"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
