--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -45,6 +45,7 @@
             android:text="@string/task_list_label"
             android:textColor="@android:color/white"
             android:textSize="25sp"
+            android:textStyle="bold"
             android:layout_marginTop="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@+id/guideline1"/>
@@ -63,9 +64,9 @@
             android:id="@+id/you_have_no_tasks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You have no tasks"
+            android:text="@string/you_have_no_tasks"
             android:textColor="@android:color/white"
-            android:textSize="25sp"
+            android:textSize="18sp"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +80,7 @@
             android:text="@string/category_list_label"
             android:textColor="@android:color/white"
             android:textSize="25sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/guideline1"
             app:layout_constraintTop_toBottomOf="@+id/task_recycler_view_id"
             app:layout_constraintBottom_toTopOf="@+id/category_recycler_view_id"/>
@@ -88,7 +90,9 @@
             android:id="@+id/category_recycler_view_id"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:background="@drawable/background_dim_curved_purple2"
             android:layout_marginBottom="16dp"
+            android:padding="10dp"
             app:layout_constraintStart_toEndOf="@+id/guideline1"
             app:layout_constraintEnd_toStartOf="@id/guideline2"
             app:layout_constraintTop_toBottomOf="@+id/category_lists_label_id"
@@ -98,9 +102,9 @@
             android:id="@+id/you_have_no_categories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="You have no categories"
+            android:text="@string/you_have_no_categories"
             android:textColor="@android:color/white"
-            android:textSize="25sp"
+            android:textSize="18sp"
             android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
