--- a/app/src/main/res/layout/item_view_task.xml
+++ b/app/src/main/res/layout/item_view_task.xml
@@ -46,7 +46,7 @@
                 android:id="@+id/session_count_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{String.valueOf(taskModel.sessionCount)}"
+                android:text='@{String.valueOf(taskModel.remainingSessions) + "/" + String.valueOf(taskModel.sessionCount)}'
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/task_title_id"
                 app:layout_constraintEnd_toEndOf="parent"
